# TekDefense-Automater

./: .gitignore  MANIFEST.in  pyproject.toml  setup.py  tekdefense.xml
automater/: automater.py  inputs.py  outputs.py  siteinfo.py  tekdefense.xml  utilities.py
automater.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
modules/: automater.py  inputs.py  outputs.py  siteinfo.py  utilities.py
